@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
' use +, \#, - instead of icons for public, protected, private


package pygame {
  class Sprite {
    + update()
  }
  class Clock
  class Sound
}

class Bird extends Sprite {
+ {static} Min_Speed : int
+ {static} Max_Speed : int
- speed : int
- time : int
+update()
}

class Cloud extends Sprite {
+update()
}

class Player extends Sprite {
- move_up_sound : Sound
- move_down_sound : Sound
+ update(pressed_keys : boolean[])
+ stop_move_sounds()
}

class Game {
- clock : Clock
- screen : Surface
- add_bird_event_type : int
- add_cloud_event_type : int
- user_quits : boolean
+ play()
''' comment out private methods
'- initialize_game()
'- make_objects()
'- load_music_and_sound()
'- play_music()
'- process_event()
'- draw()
'- collision() : boolean
'- game_over() : boolean
'- keep_frame_rate()
'- update()
}

Game --> Sprite : all_sprites "1..*"
Game --> Bird : birds "*"
Game --> Cloud : clouds "*"
Game --> Player : player "1"

''' positioning
Player -[hidden]down-> Game
Sprite -[hidden]down-> Bird
Sprite -[hidden]down-> Cloud
@enduml